ctowasm/test/samples/error/assignment/assign_to_array.c
int main() {
  int arr[1];
  arr = 2;
}